--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 			<nav>
 				<ul>
-					<li><a Href ="stream-one.html">Stream One</a></li>
+					<li><a Href ="index.html">Stream One</a></li>
 					<li><a Href ="stream-two.html">Stream Two</a></li>
 					<li><a Href ="stream-three.html">Stream Three</a></li>
 				</ul>
