--- a/stream-three.html
+++ b/stream-three.html
@@ -7,7 +7,7 @@
 		
 		<nav>
 			<ul>
-				<li><a Href ="stream-one.html">Stream One</a></li>
+				<li><a Href ="index.html">Stream One</a></li>
 				<li><a Href ="stream-two.html">Stream Two</a></li>
 				<li><a Href ="stream-three.html">Stream Three</a></li>
 			</ul>
